			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.01aq: *********************************

BUG: (11/11/04, SMR) "Make Alternate Layout View" produces Schematic cells.
FIX: In "ViewChanges.makeLayoutCells()", use layout when creating new cells.

BUG: (11/22/04, SMR) GDS output crashes when given a schematic.
FIX: Disallow non-layout views from being written in GDS.

BUG: (11/22/04, GVG) ERC shouldn't complain for not finding N/P well contacts if there are no P/N well
     regions in cell
FIX: While checking well areas, remember if P/N regions exist.

IMP: (11/22/04, GVG) Ports for pure primitive nodes will grown in size as the nodes.

BUG: (11/22/04, GVG) Extending search area in DRC for notch checking otherwise it doesn't find points along edges.
FIX: In Quick.lookForCrossPolygons(), bounding box has been extended.

IMP: (11/22/04, SMR) Display improved: "Peek" is faster; Panning the display is faster
     Display no longer inaccurate during/after panning; Down-hierarchy in-place faster.

BUG: (11/22/04, SMR) R-Trees may fail if too many objects are on top of each other.
FIX: In Geometric.RTNode.addToRTNode(), make sure the two seed nodes (oldN and newN) are different.

IMP: (11/21/04, GVG) 3D modifications: (a) Extra polygons connecting poly and poly gates in transistors
     so gate oxide looks more real. (b) Adding active region beneath poly gate (electrical layers from
     getShapeOfNode don't provide such polygons).

IMP: (11/21/04, GVG) Orbit behavior replaced by 3 separate ones in 3D view. Better zoom and translation

************************* Version 8.01ap: *********************************

IMP: (11/18/04, SMR) Added security to TopLevel.finished().

IMP: (11/18/04, GVG) Technology name in new Arc/Node tabs in preferences

IMP: (11/18/04, GVG) Allow to keep min sizes stored in preferences (not applying Technoloogy.setLayerMinWidth().